make first input of every form have autofocus attribute

--- a/views/comments/new.hbs
+++ b/views/comments/new.hbs
@@ -4,7 +4,7 @@
       <legend>New Comment</legend>
 
       <div class="form-group">
-        <textarea type="text" name="body" class="form-control" id="comment-body" placeholder="Body" form="new-comment-form"></textarea>
+        <textarea type="text" autofocus="autofocus" name="body" class="form-control" id="comment-body" placeholder="Body" form="new-comment-form"></textarea>
       </div>
 
       <div>
