--- a/views/rooms/edit.hbs
+++ b/views/rooms/edit.hbs
@@ -4,7 +4,7 @@
 
     <div class="form-group">
       <label for="post-topic">Topic:</label>
-      <input type="text" name="topic" class="form-control" id="room-topic" value="{{room.topic}}">
+      <input type="text" autofocus="autofocus" name="topic" class="form-control" id="room-topic" value="{{room.topic}}">
     </div>
 
     <div class="text-right">
