--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -4,7 +4,7 @@
 
     <div class="form-group">
       <label for="post-subject">Subject:</label>
-      <input type="text" name="subject" value="{{post.subject}}" class="form-control" id="post-subject">
+      <input type="text" autofocus="autofocus" name="subject" value="{{post.subject}}" class="form-control" id="post-subject">
     </div>
 
     <div class="form-group">
