--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -4,7 +4,7 @@
 
     <div class="form-group mt-4">
       <label for="user-username">Username:</label>
-      <input type="text" name="username" class="form-control" id="user-username" placeholder="Username">
+      <input type="text" autofocus="autofocus" name="username" class="form-control" id="user-username" placeholder="Username">
     </div>
     <div class="form-group">
       <label for="user-username">Password:</label>
