--- a/views/users/profile-edit.hbs
+++ b/views/users/profile-edit.hbs
@@ -4,7 +4,7 @@
 
     <div class="form-group mt-4">
       <label for="user-firstname">First Name:</label>
-      <input type="text" name="firstName" class="form-control" id="user-firstName" value="{{user.firstName}}">
+      <input type="text" autofocus="autofocus" name="firstName" class="form-control" id="user-firstName" value="{{user.firstName}}">
     </div>
     <div class="form-group">
       <label for="user-lastname">Lastname:</label>
