Make buttongroup in adminpage

--- a/views/posts/edit.hbs
+++ b/views/posts/edit.hbs
@@ -1,6 +1,6 @@
 <div>
   <form action="/posts/{{post.id}}/edit" method="post" class="snyggForm">
-    <legend>New Post</legend>
+    <legend>Edit Post</legend>
 
     <div class="form-group">
       <label for="post-subject">Subject:</label>
