--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -1,13 +1,20 @@
 <div class="mt-5">
 {{# if user.isAdmin}}
 <h1>Admin</h1>
-<div class="mt-3">
+<div class="mt-3 mb-4">
   <h2>Users</h2>
 </div>
 
-<div>
+<div class="col-md-5">
   {{#each users as |user|}}
-  <p>{{user.username}}</p>
+  <div class="mb-3 row justify-content-between">
+  <h3>{{user.username}}</h3>
+  <form>
+  <button class="btn btn-sm btn-primary">Mod</button>
+  <button class="btn btn-sm btn-danger">Del</button>
+  <button class="btn btn-sm btn-success">Edit</button>
+  </form>
+  </div>
   {{/each}}
 </div>
 {{else}}
