Move comment-field to the post-view

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,6 +7,6 @@
 </div>
 {{else}}
 <h1>Hello!</h1>
-<h4 class="mt-3">You need to <a href="/login"><u>Login</u></a> to see the content of this site!</h4>
+<a href="/login"><h4 class="mt-3">You need to <b>Login</b> to see the content of this site!</h4></a> 
 {{/if}}
 </div>
