add string maxlength validation to all forms

--- a/views/rooms/new.hbs
+++ b/views/rooms/new.hbs
@@ -4,7 +4,7 @@
 
     <div class="form-group mt-5">
       <label for="room-title">Topic:</label>
-      <input type="text" autofocus="autofocus" name="topic" class="form-control" id="room-topic" placeholder="Topic">
+      <input type="text" autofocus="autofocus" maxlength="20" name="topic" class="form-control" id="room-topic" placeholder="Topic">
     </div>
 
     <div class="text-right">
