--- a/views/posts/new.hbs
+++ b/views/posts/new.hbs
@@ -4,12 +4,12 @@
 
     <div class="form-group">
       <label for="post-subject">Subject:</label>
-      <input type="text" autofocus="autofocus" name="subject" class="form-control" id="post-subject">
+      <input type="text" autofocus="autofocus" maxlength="30" name="subject" class="form-control" id="post-subject">
     </div>
 
     <div class="form-group">
       <label for="post-body">Body:</label>
-      <textarea type="textarea" name="body" class="form-control" id="post-body exampleFormControlTextarea3" rows="5"></textarea>
+      <textarea type="textarea" name="body" maxlength="800" class="form-control" id="post-body exampleFormControlTextarea3" rows="5"></textarea>
     </div>
 
     <div class="form-group">
