--- a/views/users/profile-edit.hbs
+++ b/views/users/profile-edit.hbs
@@ -4,19 +4,19 @@
 
     <div class="form-group mt-4">
       <label for="user-firstname">First Name:</label>
-      <input type="text" autofocus="autofocus" name="firstName" class="form-control" id="user-firstName" value="{{user.firstName}}">
+      <input type="text" autofocus="autofocus" name="firstName" maxlength="20" class="form-control" id="user-firstName" value="{{user.firstName}}">
     </div>
     <div class="form-group">
       <label for="user-lastname">Lastname:</label>
-      <input type="text" name="lastName" class="form-control" id="user-lastName" value="{{user.lastName}}">
+      <input type="text" name="lastName" class="form-control" maxlength="20" id="user-lastName" value="{{user.lastName}}">
     </div>
     <div class="form-group">
       <label for="user-location">Location:</label>
-      <input type="text" name="location" class="form-control" id="user-location" value="{{user.location}}">
+      <input type="text" name="location" class="form-control" maxlength="30" id="user-location" value="{{user.location}}">
     </div>
     <div class="form-group">
       <label for="user-facebook">Facebook:</label>
-      <input type="text" name="facebook" class="form-control" id="user-facebook" value="{{user.facebook}}">
+      <input type="text" name="facebook" class="form-control" maxlength="50" id="user-facebook" value="{{user.facebook}}">
     </div>
     <div class="form-group">
       <label for="user-picture">Picture:</label>
