rollback on unexpected bug behavior, getting points on post saved over existing user, hashing a new password

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -2,6 +2,7 @@
   <legend>Log in!</legend>
 
   <div class="form-group mt-4">
+    <p>{{bajs.title}}</p>
     <label for="user-username">Username:</label>
     <input type="text" value="{{user.username}}" autofocus="autofocus" name="username" class="form-control" id="user-username" placeholder="Username">
   </div>
