--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -27,7 +27,7 @@
   </b>
 </div> --}}
 
-  <div class="col-md-4 text-center column justify-content-center">
+  {{!-- <div class="col-md-4 text-center column justify-content-center">
 
     <div class="mt-3 mb-2">
       <h4>Top Providers</h4>
@@ -47,7 +47,7 @@
       </ul>
     </div>
 
-  </div>
+  </div> --}}
 
 
   <div class="col-md-4 text-center column justify-content-center">
