Add errorhandling to duplicate usernames in create-new-user

--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,6 +3,7 @@
     <legend>Register a New User!</legend>
 
     <div class="form-group mt-4">
+          <p>{{usernameTaken}}</p>
       <label for="user-username">Username:</label>
       <input type="text" autofocus="autofocus" name="username" maxlength="20" class="form-control" id="user-username" placeholder="Username">
     </div>
