--- a/views/users/new.hbs
+++ b/views/users/new.hbs
@@ -3,9 +3,12 @@
     <legend>Register a New User!</legend>
 
     <div class="form-group mt-4">
-          <p>{{usernameTaken}}</p>
       <label for="user-username">Username:</label>
-      <input type="text" autofocus="autofocus" name="username" maxlength="20" class="form-control" id="user-username" placeholder="Username">
+      <input type="text" autofocus="autofocus" name="username" maxlength="20" class="form-control" id="user-username"
+        placeholder="Username">
+      {{# if usernameTaken}}
+      <p class="errorMsg">{{usernameTaken}}</p>
+      {{/if}}
     </div>
     <div class="form-group">
       <label for="user-username">Password:</label>
