--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -21,12 +21,6 @@
   </div>
 
 
-  {{!-- <div class="justify-content-center col-md-4 row">
-  <b>
-    <p class="mt-2">Or create a new one <u><a href="/rooms/new">here!</a></u></p>
-  </b>
-</div> --}}
-
   <div class="col-md-4 text-center column justify-content-center">
 
     <div class="mt-3 mb-2">
@@ -39,7 +33,8 @@
         <a href="">
           <li class="list-group-item mb-2">
             <div class="row justify-content-center">
-            <p><b>{{user.username}}</b> with <p class="badge mr-1 ml-1 badge-primary badge-pill">{{user.nrPosts}}</p> points</p>
+              <p><b>{{user.username}}</b> with <p class="badge mr-1 ml-1 badge-primary badge-pill">{{#each user}}{{posts.length}}{{/each}}</p>
+                points</p>
             </div>
           </li>
         </a>
@@ -62,8 +57,8 @@
         <a href="/rooms/{{room.id}}/posts/show/{{post.id}}">
           <li class="list-group-item mb-2">
             <div class="row justify-content-between">
-            <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
-            <p class="badge badge-primary badge-pill">{{post.points}}</p>
+              <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
+              <p class="badge badge-primary badge-pill">{{post.points}}</p>
             </div>
           </li>
         </a>
@@ -72,6 +67,11 @@
     </div>
   </div>
 
+</div>
+<div class="justify-content-center col-md-4 row">
+  <b>
+    <p class="mt-2">Or create a new one <u><a href="/rooms/new">here!</a></u></p>
+  </b>
 </div>
 
 
