--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -8,6 +8,8 @@
     <p><b>From:</b> {{user.location}}</p>
     <p><b>FB:</b> <a href="{{user.facebook}}" target="_blank">Link</a></p>
     <p><b>Member since:</b> {{user.createdAt}}</p>
+    <p><b>Posts:</b> {{user.posts.length}}</p>
+    <p><b>Comments:</b> {{user.comments.length}}</p>
     <a class="mb-2" href="/users/profile-edit"><button class="btn btn-primary btn-sm">Edit</button></a>
   </div>
 
