Change how you fetch comments and post in profile

--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -4,12 +4,12 @@
       <div class="card-header">
         <h3 class="text-center">{{post.subject}}</h3>
         <div class="row mr-4 ml-4 justify-content-center">
-          <p class="text-right mr-4"><i>Author:</i></p>
-          <img class="text-right mr-4" src="{{post.authorPic}}" height="20px" alt="profile picture" />
+          <p class="text-right mr-4"><i>Author: {{post.author.username}}</i></p>
+          <img class="text-right mr-4" src="{{post.author.picLink}}" height="20px" alt="profile picture" />
           <p class="text-right mr-4"><i>{{post.createdAt}}</i></p>
         </div>
 
-        {{#ifCond user.username post.author}}
+        {{#ifCond user.username post.author.username}}
 
         <div class="justify-content-end row">
           <a href="/rooms/{{post.room}}/posts/{{post.id}}/edit">
@@ -55,7 +55,7 @@
     <ul class="col-md-12">
       <li>
         <div class="row col-md-12">
-          <img class="mr-2" src="{{comment.authorPic}}" height="20px" alt="profile picture" />
+          <img class="mr-2" src="{{comment.author.picLink}}" height="20px" alt="profile picture" />
           <b class="mr-2">{{comment.author.username}}</b>
           <p class="text-muted"><i>{{comment.createdAt}}</i></p>
         </div>
