--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -91,7 +91,7 @@
           <li class="list-group-item mb-2">
             <div class="row justify-content-center">
               <div class="row mr-2 ml-2">
-                <p><b>{{post.subject}}</b> <i> - by: {{post.author}}</i></p>
+                <p><b>{{post.subject}}</b> <i> - by: {{post.author.username}}</i></p>
               </div>
               <div class="row mr-2 ml-2">
                 <p>with<p class="badge badge-primary badge-pill">{{post.points}}</p> points</p>
