--- a/views/rooms/show.hbs
+++ b/views/rooms/show.hbs
@@ -12,7 +12,7 @@
     <a href="{{room._id}}/posts/show/{{post.id}}">
     <li class="list-group-item d-flex justify-content-between">
       <div>
-      <p class="text-left"><b>{{post.subject}}</b> <i> by: {{post.author}}</i></p>
+      <p class="text-left"><b>{{post.subject}}</b> <i> by: {{post.author.username}}</i></p>
       </div>
       <div class="row">
       <span class="text-left mr-4">{{post.createdAt}}</span>
