Fix so pictures are properly displayed in posts-view

--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -4,8 +4,8 @@
       <div class="card-header">
         <h3 class="text-center">{{post.subject}}</h3>
         <div class="row mr-4 ml-4 justify-content-center">
-          <p class="text-right mr-4"><i>Author: {{post.author.username}}</i></p>
-          <img class="text-right mr-4" src="{{post.author.authorPic}}" height="20px" alt="profile picture" />
+          <p class="text-right mr-4"><i>Author: <b>{{post.author.username}}</b></i></p>
+          <img class="text-right mr-4" src="{{post.author.picLink}}" height="20px" alt="profile picture" />
           <p class="text-right mr-4"><i>{{post.createdAt}}</i></p>
         </div>
 
