--- a/views/rooms/index.hbs
+++ b/views/rooms/index.hbs
@@ -91,10 +91,10 @@
           <li class="list-group-item mb-2">
             <div class="row justify-content-center">
               <div class="row mr-2 ml-2">
-                <p><b>{{post.subject}}</b> <i> - by: {{post.author.username}}</i></p>
+                <p><b>{{post.subject}}</b> <i> - by: <b>{{post.author.username}}</b></i></p>
               </div>
               <div class="row mr-2 ml-2">
-                <p>with<p class="badge badge-primary badge-pill">{{post.points}}</p> points</p>
+                <p class="mr-1 ml-1">with <p class="badge badge-primary badge-pill mr-1 mr-1">{{post.points}}</p> points</p>
               </div>
             </div>
           </li>
