--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -45,44 +45,47 @@
       </div>
 
 
-    {{#ifCond post.author.username user.username}}
+      {{#ifCond post.author.username user.username}}
       {{> notvotes}}
       {{else}}
-      {{> votes }} 
-    {{/ifCond}}
+      {{> votes }}
+      {{/ifCond}}
 
-    
-    {{#each post.comments as |comment|}}
-    <ul class="col-md-12">
-      <li>
-        <div class="row col-md-12">
-          <img class="mr-2" src="{{comment.author.picLink}}" height="20px" alt="profile picture" />
-          <b class="mr-2">{{comment.author.username}}</b>
-          <p class="text-muted"><i>{{comment.createdAt}}</i></p>
         </div>
-        <p class="comment ml-4"> {{comment.body}}</p>
-      </li>
-    </ul>
-    {{!-- <div class="row col-10">
+
+
+      {{#each post.comments as |comment|}}
+      <ul class="col-md-12">
+        <li>
+          <div class="row col-md-12">
+            <img class="mr-2" src="{{comment.author.picLink}}" height="20px" alt="profile picture" />
+            <b class="mr-2">{{comment.author.username}}</b>
+            <p class="text-muted"><i>{{comment.createdAt}}</i></p>
+          </div>
+          <p class="comment ml-4"> {{comment.body}}</p>
+        </li>
+      </ul>
+      {{!-- <div class="row col-10">
       {{#ifCond user.username comment.author}}
       <p class="ml-3 badge badge-success badge-pill">edit</p>
       <p class="ml-1 badge badge-danger badge-pill">delete</p>
     {{/ifCond}}
     </div> --}}
 
-    {{/each}}
+      {{/each}}
 
-    <div class="row justify-content-md-center mt-2">
-      <div class="col-12">
-        <form action="/posts/{{post.id}}/comments" method="post" id="new-comment-form">
-          <label for="comment">New Comment</label>
-          <textarea type="text" maxlength="200" name="body" class="form-control" rows="1"
-            id="comment-body" placeholder="Comment here" form="new-comment-form"></textarea>
-          <button type="submit" class="btn btn-primary">Submit</button>
+      <div class="row justify-content-md-center mt-2">
+        <div class="col-12">
+          <form action="/posts/{{post.id}}/comments" method="post" id="new-comment-form">
+            <label for="comment">New Comment</label>
+            <textarea type="text" maxlength="200" name="body" class="form-control" rows="1" id="comment-body"
+              placeholder="Comment here" form="new-comment-form"></textarea>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
+        </div>
       </div>
-      </form>
-    </div>
 
-  
-  </div>
+
+
+</div>
 </div>
