A username is now clickable to everyone and references the users profile

--- a/views/posts/show.hbs
+++ b/views/posts/show.hbs
@@ -4,7 +4,7 @@
       <div class="card-header">
         <h3 class="text-center">{{post.subject}}</h3>
         <div class="row mr-4 ml-4 justify-content-center">
-          <p class="text-right mr-4"><i>Author: <b>{{post.author.username}}</b></i></p>
+          <p class="text-right mr-4"><i>Author: <a href="/users/show/{{post.author.username}}"><b>{{post.author.username}}</b></a></i></p>
           <img class="text-right mr-4" src="{{post.author.picLink}}" height="20px" alt="profile picture" />
           <p class="text-right mr-4"><i>{{post.createdAt}}</i></p>
         </div>
@@ -58,8 +58,8 @@
       <ul class="col-md-12">
         <li>
           <div class="row col-md-12">
-            <img class="mr-2" src="{{comment.author.picLink}}" height="20px" alt="profile picture" />
-            <b class="mr-2">{{comment.author.username}}</b>
+            <img class="mr-2" src="{{comment.author.picLink}}" height="20px" alt="profile picture">
+            <b class="mr-2"><a href="/users/show/{{comment.author.username}}">{{comment.author.username}}</a></b>
             <p class="text-muted"><i>{{comment.createdAt}}</i></p>
           </div>
           <p class="comment ml-4"> {{comment.body}}</p>
