--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,4 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<div class="text-center justify-content-center">
+  <h1>{{error.status}} {{message}}</h1>
+  <img width="600px" src="https://http.cat/[{{error.status_code}}]" />
+</div>
