--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -11,7 +11,7 @@
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
   <title>{{title}}</title>
   <link rel='stylesheet' href='/stylesheets/style.css' />
-  <link rel="shortcut icon" href="../favicon.ico" />
+  <link rel="shortcut icon" href="favicon.ico" />
 </head>
 
 <body>
